# broadcast2summary

./: .gitignore  LICENSE  README.md  README_cn.md  SKILL.md  install.sh  pyproject.toml
config/: .env.example  e2e.yaml.example  feeds.yaml.example
docs/superpowers/plans/: 2026-05-13-broadcast2summary.md  2026-05-15-transcription-speedup.md  2026-05-16-v0.3.md  2026-05-17-v0.4.md  2026-05-26-branch-e2e-isolation.md  2026-05-26-rss-rich-metadata.md
docs/superpowers/specs/: 2026-05-16-v0.3-design.md  (+5 more)
scripts/: _plist_helpers.sh  add_episode.sh  build_v05_fixtures.py  e2e_branch_run.py  e2e_check_memory.py  e2e_merge_gate.sh  e2e_real_run.py  feeds_add.sh  feeds_remove.sh  install_launchd.sh  list_failed.sh  patch_translation.py  retry_failed.sh  run_daily.sh  uninstall_launchd.sh
src/broadcast2summary/: cli.py  config.py  diarize.py  download.py  e2e_layout.py  health_check.py  json_repair.py  lark_client.py  logging_setup.py  mixed_language.py  output_im.py  output_local.py  output_wiki.py  pipeline.py  prompts.py  punctuate.py  quality.py  rss.py  runner.py  speaker_id.py  speaker_merge.py  speaker_status.py  state.py  summarize.py  test_mode.py  transcribe.py  translate.py  url_resolver.py
tests/: conftest.py  test_asr_corrections.py  test_attach_feed_config.py  test_cheap_mode.py  test_cli.py  test_config.py  test_diarize.py  test_download.py  test_e2e_layout.py  test_e2e_real_audio.py  test_e2e_smoke.py  test_health_check.py  test_json_repair.py  test_lark_client.py  test_logging_setup.py  test_memory_watchdog.py  test_mixed_language.py  test_output_im.py  test_output_local.py  test_output_wiki.py  test_pipeline.py  test_plist_helpers.py  test_prompts.py  test_punctuate.py  test_quality.py  test_resolve_parallelism.py  test_rss.py  test_runner_fetch_one.py  test_runner_parallel.py  test_runner_recovery.py  test_speaker_id.py  test_speaker_merge.py  test_speaker_status.py  test_state.py  test_summarize.py  test_transcribe.py  test_translate.py  test_url_resolver.py  test_v05_real_fixtures.py
tests/fixtures/: e2e_episodes.yaml  sample_feed.xml  sample_rich_feed.xml  sample_summary.json  sample_summary_with_corrections.json  sample_transcript.json
(+16 files in other folders)
