[project]
name = "broadcast2summary"
version = "0.1.0"
description = "Automated podcast-to-summary pipeline (Xiaoyuzhou + Apple Podcasts)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27",
    "faster-whisper>=1.0.3",
    "pyyaml>=6.0",
    "anthropic>=0.39",
    "openai>=1.50",            # used for DeepSeek (OpenAI-compatible API)
    "jieba>=0.42.1",
    "scikit-learn>=1.5",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/broadcast2summary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
